--- a/angular.json
+++ b/angular.json
@@ -24,6 +24,7 @@
               "src/test.html"
             ],
             "styles": [
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "scripts": [
